examples/Passing/If/simple6.c
int main() {
    if (1) return 5;
    else return 6;
}
