examples/Failing/If/bad_ternary.c
int main() {
    (5 > 6) ? return 1 : return 5;
}
